# e2b-hackathon-oct

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  e2b_test.py  env.example  pyproject.toml
app/: e2b_runner.py  llms.py  manage.py  prompts.py  schema.py  schemas.py
app/app/: blog_checker_main.py  e2b_runner.py  llms.py  prompts.py  schema.py
app/blogchecker/: admin.py  admin_views.py  asgi.py  forms.py  models.py  settings.py  urls.py  views_blogs.py  wsgi.py
app/blogchecker/migrations/: 0001_initial.py  0002_remove_blog_author_remove_blog_content_and_more.py  0003_rename_blog_post_e2brunoutput_blog_blogcoderecipe.py  0004_remove_e2brunoutput_blog_and_more.py  0006_e2brunoutput_code_interpreter_hostname.py  0007_remove_e2brunoutput_code_content_and_more.py  0008_alter_blogcoderecipe_code_content.py  0009_e2brunoutput_code_interpreter_hostname.py
app/blogchecker/templates/web/: app.html  base.html
app/client/: components.json  index.html
app/client/src/: Router.tsx  global.css  main.tsx
app/client/src/components/: ThemeProvider.tsx  loader.tsx
app/client/src/components/ui/: code-block.tsx  columns.ts  columns.tsx  data-table-toolbar.tsx  input.tsx  table.tsx
app/client/src/pages/: Environment.tsx  blogEntry.tsx  landing.tsx
app/client/src/types/: release.ts
blogchecker/app/: blog_checker_main.py  e2b_runner.py  prompts.py  schemas.py
blogchecker/blogchecker/: admin.py  models.py  settings.py  urls.py  views_blogs.py  views_env.py
blogchecker/blogchecker/migrations/: 0003_blogcoderecipe_rename_blog_post_e2brunoutput_blog.py  0005_blog_is_analyzed.py
blogchecker/client/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
blogchecker/client/src/: Router.tsx  sidebar.tsx
blogchecker/client/src/components/: CustomToast.tsx
blogchecker/client/src/components/ui/: button.tsx  data-table.tsx
blogchecker/client/src/pages/: blogEntry.tsx  blogs.tsx  landing.tsx
notebooks/: experiment_v1.ipynb  experiment_v1.tests.ipynb
tests/: test_e2b_runner.py  test_e2b_runner_int.py
