[tool.poetry]
name = "e2b-hackathon"
version = "0.1.0"
description = ""
authors = ["selvam palanimalai <selvam.palanimalai@gmail.com>, nehil jain <jain.nehil@gmail.com"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
e2b-code-interpreter = "^0.0.10"
langgraph = "^0.2.34"
langsmith = "^0.1.131"
langchain-anthropic = "^0.2.3"
ipython = "^8.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
